added link to website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2022-09-01" />
 
-<title>BIOL7263_Portfolio</title>
+<title>BIOL7263</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -363,13 +363,15 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">BIOL7263_Portfolio</h1>
+<h1 class="title toc-ignore">BIOL7263</h1>
 <h4 class="author">Olivia Pletcher</h4>
 <h4 class="date">2022-09-01</h4>
 
 </div>
 
 
+<p><a href="Assignment1/index.html">Assigment1</a></p>
+<p>f<code>{r setup, include=FALSE} knitr::opts_chunk$set(echo = TRUE)</code></p>
 <div id="r-markdown" class="section level2">
 <h2>R Markdown</h2>
 <p>This is an R Markdown document. Markdown is a simple formatting
