--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ pre code {
 </div>
 
 
-<p><a href="Assignment1/index.html">Assigment1</a></p>
+<p><a href="Assignment1/assignment1.html">Assigment1</a></p>
 <p>f<code>{r setup, include=FALSE} knitr::opts_chunk$set(echo = TRUE)</code></p>
 <div id="r-markdown" class="section level2">
 <h2>R Markdown</h2>
