--- a/Assignment2/Assignment2.html
+++ b/Assignment2/Assignment2.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2022-09-08" />
 
-<title>Assignment 1</title>
+<title>Assignment2</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -363,14 +363,27 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">Assignment 1</h1>
+<h1 class="title toc-ignore">Assignment2</h1>
 <h4 class="author">Olivia Pletcher</h4>
 <h4 class="date">2022-09-08</h4>
 
 </div>
 
 
-<p>Hello world</p>
+<div id="about-me" class="section level1">
+<h1><strong>About Me</strong></h1>
+<div id="educational-experiences" class="section level3">
+<h3><strong>Educational Experiences</strong></h3>
+<p>Graduate Career: University of Tulsa Molecular Biology Lab TA: 1
+Semester</p>
+<p>Undergraduate Career: University of Nebraska-Lincoln Introduction to
+Biology Lab II TA: 5 semesters</p>
+</div>
+<div id="research-interests" class="section level3">
+<h3><strong>Research Interests</strong></h3>
+<p>Cliff Swallows, of course Reproductive Success of Cliff Swallows <a href="https://www.cliffswallow.org">My Website</a></p>
+</div>
+</div>
 
 
 
