--- a/index.html
+++ b/index.html
@@ -370,13 +370,6 @@ pre code {
 </div>
 
 
-<div id="header-1" class="section level1">
-<h1>Header 1</h1>
-<div id="header-2" class="section level2">
-<h2>Header 2</h2>
-<div id="header-3" class="section level3">
-<h3>Header 3</h3>
-<p><a href="https://www.cliffswallow.org">My website</a></p>
 <table>
 <thead>
 <tr class="header">
@@ -391,15 +384,16 @@ pre code {
 1</a></td>
 </tr>
 <tr class="even">
-<td align="left">Sept 2</td>
+<td align="left">Sept 8</td>
 <td align="center"><a href="Assignment2/Assignment2.html">Assignment
 2</a></td>
 </tr>
+<tr class="odd">
+<td align="left">Sept 15</td>
+<td align="center">[Assignment 3]</td>
+</tr>
 </tbody>
 </table>
-</div>
-</div>
-</div>
 
 
 
