added part 7 to assignemnt 3

--- a/Assignment3/assignment3.html
+++ b/Assignment3/assignment3.html
@@ -370,9 +370,7 @@ pre code {
 </div>
 
 
-<div id="number-6-fasta-headers-shark_proteins_headers_only.txt" class="section level1">
-<h1>Number 6: FASTA Headers (shark_proteins_headers_only.txt)</h1>
-</div>
+<p><a href="shark_protein_headers_only.txt">part 6</a> <a href="ribosome_protein.txt">part 7</a></p>
 
 
 
