--- a/Assignment4/Assignment4.html
+++ b/Assignment4/Assignment4.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Olivia Pletcher" />
 
-<meta name="date" content="2022-09-29" />
+<meta name="date" content="2022-10-05" />
 
 <title>Assignment4</title>
 
@@ -365,16 +365,18 @@ pre code {
 
 <h1 class="title toc-ignore">Assignment4</h1>
 <h4 class="author">Olivia Pletcher</h4>
-<h4 class="date">2022-09-29</h4>
+<h4 class="date">2022-10-05</h4>
 
 </div>
 
 
 <p><a href="scripts/assignment%204.R">My Script</a></p>
 <ol style="list-style-type: decimal">
-<li><p>2020 was the year with the most individual observations of
-3154.</p></li>
-<li></li>
+<li><p>2014 was the year with the most individual observations with a
+total of of 211249.</p></li>
+<li><p>In 2014 there were 210 species observed.</p></li>
+<li><p>Missouri had the most total observations of 596 red-winged
+blackbirds.</p></li>
 </ol>
 
 
