--- a/Assignment4/Assignment4.html
+++ b/Assignment4/Assignment4.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Olivia Pletcher" />
 
-<meta name="date" content="2022-10-05" />
+<meta name="date" content="2022-10-13" />
 
 <title>Assignment4</title>
 
@@ -365,7 +365,7 @@ pre code {
 
 <h1 class="title toc-ignore">Assignment4</h1>
 <h4 class="author">Olivia Pletcher</h4>
-<h4 class="date">2022-10-05</h4>
+<h4 class="date">2022-10-13</h4>
 
 </div>
 
@@ -377,7 +377,36 @@ total of of 211249.</p></li>
 <li><p>In 2014 there were 210 species observed.</p></li>
 <li><p>Missouri had the most total observations of 596 red-winged
 blackbirds.</p></li>
+<li><p>Average observation</p></li>
 </ol>
+<table>
+<thead>
+<tr class="header">
+<th align="left">Year</th>
+<th align="center">Mean Duration Per Year</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">2003</td>
+<td align="center">0.03055556</td>
+</tr>
+<tr class="even">
+<td align="left">2004</td>
+<td align="center">0.06268452</td>
+</tr>
+<tr class="odd">
+<td align="left">2009</td>
+<td align="center"><a href="Assignment3/assignment3.html">Assignment
+3</a></td>
+</tr>
+<tr class="even">
+<td align="left">Sept 29</td>
+<td align="center"><a href="scripts/Assignment4.html">Assignment
+4</a></td>
+</tr>
+</tbody>
+</table>
 
 
 
