--- a/Assignment4/Assignment4.html
+++ b/Assignment4/Assignment4.html
@@ -397,16 +397,52 @@ blackbirds.</p></li>
 </tr>
 <tr class="odd">
 <td align="left">2009</td>
-<td align="center"><a href="Assignment3/assignment3.html">Assignment
-3</a></td>
+<td align="center">0.13333333</td>
 </tr>
 <tr class="even">
-<td align="left">Sept 29</td>
-<td align="center"><a href="scripts/Assignment4.html">Assignment
-4</a></td>
+<td align="left">2013</td>
+<td align="center">0.18666667</td>
+</tr>
+<tr class="odd">
+<td align="left">2014</td>
+<td align="center">0.30391086</td>
+</tr>
+<tr class="even">
+<td align="left">2015</td>
+<td align="center">0.27567568</td>
+</tr>
+<tr class="odd">
+<td align="left">2016</td>
+<td align="center">0.29675926</td>
+</tr>
+<tr class="even">
+<td align="left">2017</td>
+<td align="center">0.38439606</td>
+</tr>
+<tr class="odd">
+<td align="left">2018</td>
+<td align="center">0.29077242</td>
+</tr>
+<tr class="even">
+<td align="left">2019</td>
+<td align="center">0.25301860</td>
+</tr>
+<tr class="odd">
+<td align="left">2020</td>
+<td align="center">0.50292476</td>
+</tr>
+<tr class="even">
+<td align="left">2021</td>
+<td align="center">0.26699252</td>
+</tr>
+<tr class="odd">
+<td align="left">2022</td>
+<td align="center">0.44163576</td>
 </tr>
 </tbody>
 </table>
+<p><a href="%22Assignment4/top_10_table.csv%22">Bird list filtered by
+top 10 species</a></p>
 
 
 
