--- a/Assignment4/Assignment4.html
+++ b/Assignment4/Assignment4.html
@@ -441,8 +441,7 @@ blackbirds.</p></li>
 </tr>
 </tbody>
 </table>
-<p><a href="%22Assignment4/top_10_table.csv%22">Bird list filtered by
-top 10 species</a></p>
+<p><a href="Assignment4/MBT_ebird.csv">Bird list</a></p>
 
 
 
