fixed assignment 4 on portfolio

--- a/Assignment4/Assignment4.html
+++ b/Assignment4/Assignment4.html
@@ -4,15 +4,15 @@ author: "Olivia Pletcher"
 date: "`r Sys.Date()`"
 output: html_document
 ---
-[My Script](scripts/assignment 4.R)
 
-1. 2014 was the year with the most individual observations with a total of of 211249.
 
-2. In 2014 there were 210 species observed.
+## 1. 2014 was the year with the most individual observations with a total of of 211249.
 
-3. Missouri had the most total observations of 596 red-winged blackbirds.
+## 2. In 2014 there were 210 species observed.
 
-4. Average observation
+## 3. Missouri had the most total observations of 596 red-winged blackbirds.
+
+## 4. Average observation
 
 |Year|Mean Duration Per Year|
 |:-|:-:|
