--- a/Assignment 5/Assignment-5.html
+++ b/Assignment 5/Assignment-5.html
@@ -373,7 +373,8 @@ pre code {
 <p><a href="Assignment%205%20script.R">Script</a> is for assignment
 5</p>
 <p>Part 1: Merged File <a href="results.csv">Results</a></p>
-<p>Part 2: Residual Mass and treatment</p>
+<p>Part 2: Residual Mass and treatment <a href="SD_residual_mass.csv">SD_residual_mass</a> (I’m honestly not sure
+if I did this right)</p>
 
 
 
